# example-parallel-robots

./: .gitignore  .gitmodules  .mergify.yml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  actuation_model.py  backlash_modelization.py  closed_loop_forward_kin.py  closed_loop_jacobian.py  closed_loop_kinematics copy.py  closed_loop_kinematics.py  closed_loop_mount  closed_loop_mount.py  constraints.py  debug_kangaroo.py  debug_kangaroo_test.py  debug_kangaroo_test_constraints.py  default.nix  flake.nix  force_propagation.py  jacobian_verification.py  jacobian_verification_old.py  loader_tools.py  package.nix  package.xml  pyproject.toml  robot_info.py  robot_utils.py  tests.py  tests_forwardKinematics.py  tests_inverseKinematics.py  tests_mounting.py
closed_loop_robot_packaging/: MANIFEST.in  pyproject.toml  setup.py
closed_loop_robot_packaging/closed_loop_robot_test_virgile/: __init__.py  loader_tools.py  robot_utils.py
closed_loop_robot_packaging/closed_loop_robot_virgile.egg-info/: PKG-INFO  SOURCES.txt
closed_loop_robot_packaging/robots/5bar_linkage_iso3d/: part_5.stl
closed_loop_robot_packaging/robots/cassie_like/: half_hachil_rode.stl  half_planta_rode.stl  part_4.part  tigh.part
closed_loop_robot_packaging/robots/custom_1/: config.json  tibias_cut.stl  tibias_cut2.stl
closed_loop_robot_packaging/robots/digit_like/: hip_x.stl  shin.part  toe_b_2_2.part
closed_loop_robot_packaging/robots/digit_like_2legs/: hip_y.part
closed_loop_robot_packaging/robots/disney_like/: cuisse_1.part  tibias_mirror2.part
closed_loop_robot_packaging/robots/kangaroo_like/: hanche.stl  part_7.part  renvois_cheville_2.part
closed_loop_robot_packaging/robots/robot_delta/: bielle1.part
closed_loop_robot_packaging/robots/talos_closed/: talos_closed.py
closed_loop_robot_packaging/robots/talos_like/: actuator_knee.stl  config.json
closed_loop_robot_packaging/robots/talos_like_2legs/: part_12.stl  part_23.part  part_6.stl  part_7.part  part_9.stl
closed_loop_robot_packaging/robots/wl16_like/: part_4.stl
closed_loop_robot_packaging/src/closed_loop_robot_test_virgile/: loader_tools.py
closed_loop_robot_packaging/src/closed_loop_robot_virgile.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
closed_loop_tools/: CMakeLists.txt  README.md  package.xml
closed_loop_tools/python/: CMakeLists.txt
closed_loop_tools/python/closed_loop_tools/: actuation.py  closures.py  constraints.py  forward_kinematics.py  inverse_dynamics.py  inverse_kinematics.py  jacobian.py  mounting.py  projections.py
closed_loop_tools/unittest/: test_jacobian.py  tests_inverseKinematics.py  tests_mounting.py
example-parallel-robots/: CMakeLists.txt  package.xml
example-parallel-robots/example_parallel_robots/: loader_tools.py  talos_closed.py
example-parallel-robots/python/: CMakeLists.txt
example-parallel-robots/python/example_parallel_robots/: __init__.py  loader_tools.py  talos_closed.py
example-parallel-robots/robots/: README.md
example-parallel-robots/robots/5bar_linkage/: robot.urdf  robot.yaml
example-parallel-robots/robots/5bar_linkage_iso3d/: barre.part  robot.urdf
example-parallel-robots/robots/5bar_linkage_iso6d/: part_5.part  part_6.part  robot.urdf  robot.yaml
example-parallel-robots/robots/cassie_like/: foot_2.part  half_hachil_rode.part  hip_pitch.part  hip_roll.part  pelvis.part  robot.urdf  shin.part  tarsus.part  tigh.part
example-parallel-robots/robots/custom_1/: tibias_cut.part
example-parallel-robots/robots/digit_like/: actuator_molet.part  config.json  crank.part  foot.part  foot.stl  foot_part.part  foot_roll.part  hip_x.part  hip_y.part  hip_z.part  robot.yaml  shin.part  tarsus.part  toe_a_1_2.part  toe_b_1_2.part  toe_b_2_2.part  torso.part  z.part
example-parallel-robots/robots/digit_like_2legs/: config.json  foot_roll.part  hip_x.part  hip_y.part  hip_z.part  molet.part  robot.urdf  robot.yaml  tarsus.part  toe_a_1_2.part  toe_a_2_2.part  toe_b_2_2.part  toe_b_2_2.stl  torso.part
example-parallel-robots/robots/disney_like/: bloc_moteur2.part  cardan.part  cheville.part  config.json  cuiqqe_2.part  cuiqqe_22.part  cuisse_1.part  foot.part  motor_1.stl  part_6.part  part_8.part  part_9.part  robot.urdf  robot.yaml  shin_mirror2.stl  tibias.part  tibias_mirror.stl  tigh_mirror2.stl
example-parallel-robots/robots/kangaroo_like/: foot.stl  foot_part.part  hanche.part  motor_hip1.part  part_1.part  part_16.part  part_4.part  part_5.part  part_9.part  robot.urdf  robot.yaml  rode_tarsus.stl  tarsus.part  tibias.part  universal_foot.part  universal_hip.part
example-parallel-robots/robots/kangaroo_like_2leg/: cylinder.part  hanche_batis_gauche.part  hanche_gauche.part  hip_ground.stl  moteur_hanche1.part  part_1.part  part_1_gauche.part  part_2.part  part_2.stl  part_3.part  part_5.part  part_7.part  part_7.stl  part_9.part  robot.urdf  universal_hip.stl
example-parallel-robots/unittest/: CMakeLists.txt  test_robot.py
example_parallel_robots/: CMakeCache.txt  CMakeLists.txt  README.md  __init__.py  loader_tools.py  package.xml  path.py  pyproject.toml  robot_options.py  talos_closed.py  talos_closed_6d.py  talos_only_legs.py  talos_utils.py  vizutils.py
example_parallel_robots/python/: CMakeLists.txt
example_parallel_robots/unittest/: CMakeLists.txt  test_robot.py
sandbox-pinocchio-parallel-robots/: CMakeLists.txt  LICENSE  README.md  package.xml
sandbox-pinocchio-parallel-robots/python/: CMakeLists.txt
sandbox-pinocchio-parallel-robots/sandbox_pinocchio_parallel_robots/: __init__.py  reorganize_models.py
sandbox-pinocchio-parallel-robots/unittest/: CMakeLists.txt
toolbox-parallel-robots/: CMakeLists.txt  LICENSE  README.md  package.xml
toolbox-parallel-robots/toolbox_parallel_robots/: __init__.py  actuation_data.py  closures.py  forward_kinematics.py  freeze_joints.py  inverse_kinematics.py
toolbox-parallel-robots/unittest/: CMakeLists.txt  test_jacobian.py  tests_inverseKinematics.py  tests_mounting.py
unittest/: CMakeLists.txt  test_robot.py  unittest_delta_yaml.txt  unittest_iso3D.txt  unittest_iso3D_yaml.txt
(+1228 files in other folders)
