[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project]
name = "example-parallel-robots"
description = "Set of parallel robot models for general use in benchmarks and examples"
version = "0.0.1"
readme = "README.md"
authors = [
  {name = "Virgile Batto", email = "vbatto@laas.fr"},
  {name = "Ludovic De Matteis", email = "ldematteis@laas.fr"}
]
maintainers = [
  {name = "Guilhem Saurel", email = "guilhem.saurel@laas.fr"}
]
requires-python = ">=3.8"
dependencies = [
  "toolbox-parallel-robots>=1.2.0"
]

[tool.uv.build-backend]
module-root = ""
