<?xml version="1.0"?>
<package format="3">
  <name>closed-loop-tools</name>
  <version>0.0.1</version>
  <description>Toolbox for parallel robots applications</description>
  <author email="vbatto@laas.fr">Virgile Batto</author>
  <maintainer email="ldematteis@laas.fr">Ludovic De Matteis</maintainer>
  <license>BSD</license>

  <url type="repository">https://gitlab.laas.fr/ldematteis/example-parallel-robots</url>

  <build_depend>git</build_depend>
  <depend>python3</depend>
  <depend>python3-numpy</depend>
  <!-- The default setting has BUILD_TESTING=ON, as thus we need to explicitly depend on Pinocchio -->
  <!-- <build_depend>pinocchio</build_depend> -->
  <depend>pinocchio</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>