<?xml version="1.0"?>
<package format="3">
  <name>sandbox-pinocchio-parallel-robots</name>
  <version>0.0.1</version>
  <description>Set of tools for general purpose operations on pinocchio models. This was originally designed to work with parallel robots.</description>
  <author email="ldematteis@laas.fr">Ludovic De Matteis</author>
  <author email="vbatto@laas.fr">Virgile Batto</author>
  <maintainer email="ldematteis@laas.fr">Ludovic De Matteis</maintainer>
  <license>BSD</license>

  <url type="repository">https://gitlab.laas.fr/ldematteis/example-parallel-robots</url>

  <build_depend>git</build_depend>
  <depend>python3</depend>
  <depend>pinocchio</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>