<?xml version="1.0"?>
<package format="3">
  <name>toolbox-parallel-robots</name>
  <version>0.0.1</version>
  <description>Set of tools to work with robots with bilateral constraints</description>
  <author email="vbatto@laas.fr">Virgile Batto</author>
  <author email="ldematteis@laas.fr">Ludovic De Matteis</author>
  <maintainer email="ldematteis@laas.fr">Ludovic De Matteis</maintainer>
  <license>BSD</license>

  <url type="repository">https://gitlab.laas.fr/ldematteis/example-parallel-robots</url>

  <build_depend>git</build_depend>
  <depend>python3</depend>
  <depend>python3-numpy</depend>
  <!-- The default setting has BUILD_TESTING=ON, as thus we need to explicitly depend on Pinocchio -->
  <!-- <build_depend>pinocchio</build_depend> -->
  <depend>pinocchio</depend>
  <depend>pyaml</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>